[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/ItemButton.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="ItemButton" type="TextureButton"]
margin_top = 18.0
margin_right = 40.0
margin_bottom = 18.0
toggle_mode = true
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = -18.0
margin_right = 40.0
margin_bottom = 22.0

[node name="NameLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
margin_right = 64.0
margin_bottom = 14.0
align = 1
autowrap = true

[node name="ItemImage" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 18.0
margin_right = 64.0
margin_bottom = 82.0
texture = ExtResource( 2 )

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 86.0
margin_right = 64.0
margin_bottom = 100.0
align = 1
autowrap = true
